added some jUnit
SVN-Revision: 2613